chnage to restaurants

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <div class="panel panel-primary">
     <div class="panel-heading">
         <h3 class="panel-title">
-            Upload an Image
+            Add A Restaurant
         </h3>
     </div>
 
